many things changed

--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,38 +1,55 @@
 ---
 layout: page
-title: Projects
-subtitle: Side projects are fun.
-desc: Side projects are fun.
-permalink: /projects/
+title: Projets
+subtitle: Des choses que j'ai fait.
+desc: Des choses que j'ai fait.
+permalink: /projets/
 ---
 
-<p>Lorem markdownum liquidas. Ad qui saxo prodis una, dextra medicamina fremit voce, Iuppiter, sum morte, et. Est hos est vultum ocius dextra praetulit aequoris hominem.</p>
+<p>Mes derniers projets&hellip;</p>
 
 <div class="projects">
   <div class="grid no-gutters">
 
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-project/">Project 1</a></h4>
-        <p>Laeva clamat qui Perseus erit, discrimine ramos illa <a href="sample-project/">restabat</a>: bracchia, templa, ab spectans. Monte contigit Rhodosque manus mille est omnia eiusdem nondum: qui Modo.</p>
+        <h4 class="project-title"><a href="https://github.com/jfoucher/mailocal">Mailocal</a></h4>
+        <p>
+          A local SMTP server with email display, used mostly for development of other apps. Think unlimited Mailtrap that runs on your own computer.
+        </p>
+
+        <a class="github-button" href="https://github.com/jfoucher/mailocal" data-icon="octicon-star" aria-label="Star jfoucher/mailocal on GitHub">Star</a>
+
+        <a class="github-button" href="https://github.com/jfoucher/mailocal/fork" data-icon="octicon-repo-forked" aria-label="Fork jfoucher/mailocal on GitHub">Fork</a>
       </div>
     </div>
-
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-project/">Project 2</a></h4>
-        <p><em>Quoque videri</em>: sibi in qua nexibus rapto, Munychiosque bracchia sua pars, iram nec tonitruque. Quisquis thalamis Lyncides e remorum an omnibus monstri dempta. Mea tecta! Orbem haut non procumbit <em>facit</em>.</p>
+        <h4 class="project-title"><a href="https://github.com/jfoucher/Labyrinth">Labyrinth</a></h4>
+        <p>
+          A simple labyrinth game on iOS, developed to practice Swift and Spritekit
+        </p>
+
+        <a class="github-button" href="https://github.com/jfoucher/Labyrinth" data-icon="octicon-star" aria-label="Star jfoucher/Labyrinth on GitHub">Star</a>
+
+        <a class="github-button" href="https://github.com/jfoucher/Labyrinth/fork" data-icon="octicon-repo-forked" aria-label="Fork jfoucher/Labyrinth on GitHub">Fork</a>
       </div>
     </div>
-
     <div class="unit one-third">
       <div class="project">
-        <h4 class="project-title"><a href="sample-project/">Project 3</a></h4>
-        <p>Tumefactum saepe, lactis, sibi ponto ut ad acie nam harundinis nostrae, totiens cerae, quamvis. Et in <strong>sata dies</strong> milite flectitur iste.</p>
+        <h4 class="project-title"><a href="https://github.com/jfoucher/Lecteur">Lecteur</a></h4>
+        <p>
+          An app to read text aloud. Simply take a picture of some text and it will be read back to you.
+        </p>
+
+        <a class="github-button" href="https://github.com/jfoucher/Lecteur" data-icon="octicon-star" aria-label="Star jfoucher/Lecteur on GitHub">Star</a>
+
+        <a class="github-button" href="https://github.com/jfoucher/Lecteur/fork" data-icon="octicon-repo-forked" aria-label="Fork jfoucher/Lecteur on GitHub">Fork</a>
       </div>
     </div>
   </div><!-- grid -->
 
+{% comment %}
   <div class="grid no-gutters">
 
     <div class="unit one-third">
@@ -51,3 +68,4 @@ permalink: /projects/
     </div>
   </div><!-- grid -->
 </div>
+{% endcomment %}
