--- a/_pages/work.html
+++ b/_pages/work.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-title: Work
-subtitle: Happy users, happy clients.
-desc: Happy users, happy clients.
-permalink: /work/
+title: Boulot
+subtitle: J'aime bien aussi, mais un peu ça va.
+desc: J'aime bien, mais un peu ça suffit.
+permalink: /boulot/
 ---
-
+{% comment %}
 <p>Mea speciem facta postquam quae ab catulo, bracchia nepotis: est. Suae <strong>posset cingebant</strong> patris</p>
 
 <div class="projects">
@@ -26,3 +26,4 @@ permalink: /work/
   </div><!-- grid -->
 </div>
 
+{% endcomment %}
